--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -17,13 +17,10 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "preserve",
-    "baseUrl": ".",
-    "paths": {
-        "@/*": ["src/*"]
-    }
+    "jsx": "preserve"
   },
   "include": [
     "src"
-  ]
+  ],
+  "extends": "./paths.json"
 }
