--- a/app/package.json
+++ b/app/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.18.1",
     "babel-plugin-import": "^1.11.0",
     "customize-cra": "^0.2.12",
+    "gh-pages": "^2.1.1",
     "less": "^3.9.0",
     "less-loader": "^4.1.0",
     "lodash": "^4.17.15",
@@ -34,7 +35,9 @@
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -50,5 +53,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "homepage": "https://yikatong.xitf.vip"
 }
